# CapitolGains

./: .env.example  .gitignore  .python-version  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
capitolgains/: __init__.py
capitolgains/cli/: __init__.py
capitolgains/core/: congress.py  representative.py  senator.py
capitolgains/database/: __init__.py
capitolgains/utils/: representative_scraper.py  senate_scraper.py  senator_scraper.py
delete_docs/: congress_gov_api_docs.md
examples/: congress_disclosure_example.py  session_example.py
tests/: README.md  conftest.py  requirements-test.txt
tests/core/: test_congress.py  test_representative.py  test_senator.py
tests/test_core/: test_congress.py
tests/test_house/: test_house_trade_reports.py
tests/test_senate/: test_annual_reports.py  test_senate_trade_reports.py
tests/test_utils/: test_scrapers.py
tests/utils/: test_representative_scraper.py  test_scraper.py  test_senate_scraper.py  test_senator_scraper.py
