[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capitolgains"
version = "0.1.0"
authors = [
    {name = "Will Mundy"}
]
description = "A Python package for retrieving and analyzing financial disclosure data from members of Congress"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.41.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["capitolgains*"] 